# pkd-hooks

./: .pre-commit-config.yaml  .pre-commit-hooks.yaml  LICENSE.txt  README.md  environment.yml  pyproject.toml
src/check_posix_portable_filename/: __init__.py  __main__.py
tests/check_posix_portable_filename/: test_args_files_to_filenames.py  test_check_filenames.py
