[project]
name = "pkd-hooks"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Lukas Grassauer", email = "lukas@grassauer.eu" }
]
dependencies = []
readme = "README.md"
requires-python = ">= 3.8"

[project.scripts]
"check-posix-portable-filename" = "check_posix_portable_filename:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "ruff>=0.5.4",
    "mypy>=1.11.0",
    "pytest>=8.3.1",
]

[tool.ruff]
line-length = 120
indent-width = 4

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    "W",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
]



[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/check_posix_portable_filename"]

[tool.setuptools.package-data]
"pkd-hooks" = ["src/check_posix_portable_filename/py.typed"]
